--- a/Archives.html
+++ b/Archives.html
@@ -175,13 +175,13 @@ window.onload = function() {
 
            <!--<tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.6.html" style="color:#0033CC" ><font size="3"><strong><u>Issue 6 </u></font></strong></a></td></tr>
 
-		  <tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.5.html" style="color:#0033CC" ><font size="3"><strong><u>Issue 5 </u></font></strong></a></td></tr>
+		  <tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.5.html" style="color:#0033CC" ><font size="3"><strong><u>Issue 5 </u></font></strong></a></td></tr>-->
 
 		  <tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.4.html" style="color:#0033CC" ><font size="3"><strong><u>Issue 4 </u></font></strong></a></td></tr>
 
 		  <tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.3.html" style="color:#0033CC" ><font size="3"><strong><u>Issue 3</u></font></strong></a></td></tr>
 
-                  <tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.2.html" style="color:#0033CC" ><font size="3"><strong><u> Issue 2 </u></font></strong></a></td></tr>-->
+                  <tr  height="30" ><td align="center"><a href="http://www.mathsjournal.org/Vol1IssueNo.2.html" style="color:#0033CC" ><font size="3"><strong><u> Issue 2 </u></font></strong></a></td></tr>
 
 		  <tr  height="30" ><td align="center" ><font size="3"><a href="http://www.mathsjournal.org/Vol1IssueNo.1.html" style="color:#0033CC" ><font size="3"><strong><u> Issue 1 </u></font></strong></a></td></tr>
 			</table>
@@ -214,6 +214,7 @@ window.onload = function() {
 
 		<li><div><img src="" align="left" style="margin:10px" /><a href="index.html"> Home</a></div></li>
 		<li><div><a href="Archives.html">Archives</a></div></li>
+		<li><div><a href="Topics.html">Topics</a></div></li>
 		<li><div><a href="CurrentIssues.html">Current Issue</a></div></li>
 		<li><div><a href="callforpaper.html">Call For Paper<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></a></div></li>
 		<li><div><a href="Publication-Fee.html">Publication Fee </a>
@@ -249,10 +250,10 @@ window.onload = function() {
 		<div>
 		<ul class="sidemenumulti">
 		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.mathsjournal.org" target="blank"><font size="2"><strong>ISAR IJMCT </strong></font></a></div></li>
-		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>IJCSE </strong></font></a></div></li>
-                <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.internationaljournalisar.org/IJMCT/index.html" target="blank"><font size="2"><strong>IJMCT </strong></font></a></div></li>
-                <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.internationaljournalisar.org/IJPT/index.html" target="blank"><font size="2"><strong>IJPT</strong></font></a></div></li>
-                <li><div><a href="http://www.internationaljournalisar.org" target="blank"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
+		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>ISAR IJCSE </strong></font></a></div></li>
+        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijretjournal.org" target="blank"><font size="2"><strong>ISAR IJRET </strong></font></a></div></li>
+        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijp2p.org" target="blank"><font size="2"><strong>ISAR IJPT</strong></font></a></div></li>
+        <li><div><a href="http://www.internationaljournalisar.org" target="blank"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
 		</ul></div></div>
 
 <!--<div class="sidebarboxmulti" align="center">
@@ -262,8 +263,10 @@ window.onload = function() {
 
 			<div class="sidebarboxmulti" align="center">
               <h2> Visiter Counter</h2>
-			  <center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1404326,"FFFFFF","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
-			   </center>
+		<!-- BEGIN: Powered by Supercounters.com -->
+		<center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1421319,"FFFFFF","000000","0d0c0d",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
+		</center>
+		<!-- END: Powered by Supercounters.com -->
 
 			</div>
 
