--- a/copyright-infringement.html
+++ b/copyright-infringement.html
@@ -260,6 +260,7 @@
 
 		<li><div><img src="" align="left" style="margin:10px" /><a href="index.html"> Home</a></div></li>
 		<li><div><a href="Archives.html">Archives</a></div></li>
+		<li><div><a href="Topics.html">Topics</a></div></li>
 		<li><div><a href="CurrentIssues.html">Current Issue</a></div></li>
 		<li><div><a href="callforpaper.html">Call For Paper<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></a></div></li>
 		<li><div><a href="Publication-Fee.html">Publication Fee </a>
@@ -296,10 +297,10 @@
 		<div>
 		<ul class="sidemenumulti">
 		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.mathsjournal.org" target="blank"><font size="2"><strong>ISAR IJMCT </strong></font></a></div></li>
-		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>IJCSE </strong></font></a></div></li>
-                <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.internationaljournalisar.org/IJMCT/index.html" target="blank"><font size="2"><strong>IJMCT </strong></font></a></div></li>
-                <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.internationaljournalisar.org/IJPT/index.html" target="blank"><font size="2"><strong>IJPT</strong></font></a></div></li>
-                <li><div><a href="http://www.internationaljournalisar.org" target="blank"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
+		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>ISAR IJCSE </strong></font></a></div></li>
+        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijretjournal.org" target="blank"><font size="2"><strong>ISAR IJRET </strong></font></a></div></li>
+        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijp2p.org" target="blank"><font size="2"><strong>ISAR IJPT</strong></font></a></div></li>
+        <li><div><a href="http://www.internationaljournalisar.org" target="blank"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
 		</ul></div></div>
 
 
@@ -311,8 +312,10 @@
 
 			<div class="sidebarboxmulti" align="center">
               <h2> Visiter Counter</h2>
-			 <center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1404326,"FFFFFF","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
-			   </center>
+<!-- BEGIN: Powered by Supercounters.com -->
+		<center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1421319,"FFFFFF","000000","0d0c0d",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
+		</center>
+		<!-- END: Powered by Supercounters.com -->
 
 			</div>
 
