--- a/aimscope.html
+++ b/aimscope.html
@@ -233,173 +233,9 @@
 <center><a href="http://www.internationaljournalisar.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u><span class="monthDemo"></span><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br><br>
 
     <font color="#FF4000" font size="4"><u>ISAR IJMCT Aim and Scope</u></font></font><br><br>
-   <p align="justify" style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">Authors are invited to submit unpublished papers which are  not review in any other journal or conference.This international journal is directed to researchers,  engineers, educators, managers, programmers and users of computers who are  interested in computer science engineering.  <br />
+   <p align="justify" style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">Authors are invited to submit unpublished papers which are  not review in any other journal or conference.This international journal is directed to research articles, reviews, case studies, guest edited thematic issues and short communications/letters in all areas of mathematics, applied mathematics, applied commutative algebra and algebraic geometry, mathematical biology, physics and engineering, theoretical bioinformatics, experimental mathematics, theoretical computer science, numerical computation and applications of systems, partial differential and differential equations, integral and integral differential equations and mathematical modeling  <br />
   <br />
- Research area includes but not limited to</p>
 
- <p>
-     <table style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">
-			    <tr  height="10px">
-
-			 	<td bgcolor="#FFFFFF" width="220px"><div align="left">- Data Communication, GPS and location-based applications</div></td>
-				<td width="50px"></td>
-				</tr>
-
-				<tr>
-
-			 	<td bgcolor="#FFFFFF" width="220px"><div align="left" >- Digital Electronics, Grid Networking</div></td>
-				<td width="50px"></td>
-				</tr>
-
-				<tr>
-
-			 	<td bgcolor="#FFFFFF" width="170px"><div align="left" >- Telecommunication Technologies</div></td>
-				<td width="50px"></td>
-			    </tr>
-
-			 	<tr height="12px">
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Human Computer Interaction (HCI)</div></td>
-				<td width="50px"></td>
-				</tr>
-
-				<tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Image analysis and processing</div></td>
-				<td width="50px"></td>
-				</tr>
-
-				<tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Information and data security</div></td>
-				<td width="50px"></td>
-			    </tr>
-
-
-			    <tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Field Theory</div></td>
-				<td width="50px"></td>
-				</tr>
-
-				<tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Mobile Computing and Applications</div></td>
-				<td width="50px"></td>
-				</tr>
-
-				<tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Analog &amp; Digital devices and Services</div></td>
-				<td width="50px"></td>
-			    </tr>
-
-			  <tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Multimedia Communications</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Digital Security</div>
-				</td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Microprocessor based Technologies</div></td>
-			 </tr>
-
-
-<tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Sensors: Networking theory and technologies</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Perception and semantic interpretation</div></td>
-				<td width="50px"></td></tr><tr>
-				<td bgcolor="#FFFFFF"><div align="left" >- Ad hoc networks for pervasive communications Real-time information systems</div></td>
-			 </tr>
-
-			 <tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Advanced Computing Architectures and New Programming Models</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Artificial Intelligence, Remote Sensing</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Broadband wireless technologies</div></td>
-			 </tr>
-
-
-<tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Emerging wireless network security issues</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Cooperative wireless communications, Management, monitoring, and diagnosis of networks</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Biologically inspired communication</div></td>
-			 </tr>
-
-
-			 <tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Cross-layer optimization and cross-functionality designs</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Networks and wireless networks security issues</div></td>
-				<td width="50px"></td></tr><tr>
-
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Decision making Communication Systems</div></td>
-			 </tr>
-
-			  <tr>
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Antenna Analysis &amp; Design for wireless applications</div></td>
-				<td width="50px"></td></tr><tr>
-			    <td bgcolor="#FFFFFF"><div align="left" >- Digital signal processing, Intelligent Systems Approach</div></td>
-				<td width="50px"></td></tr><tr>
-				<td bgcolor="#FFFFFF"><div align="left" >- Distributed Sensor Networks, Information Technology Application</div></td>
-			 </tr>
-
-			 <tr>
-			 	<td bgcolor="#FFFFFF"><div align="left" >- Evolutionary computing and intelligent systems</div></td>
-				<td width="50px"></td></tr><tr>
-				<td bgcolor="#FFFFFF"><div align="left" >- Control Theory and Application</div></td>
-				<td width="50px"></td></tr><tr>
-				<td bgcolor="#FFFFFF"><div align="left" >- Real Time Systems</div></td>
-			 </tr>
-
-
-			 <tr>
-				<td bgcolor="#FFFFFF"><div align="left" >- Speech interface; Speech processing and Collaborative applications</div></td>
-				<td width="50px"></td></tr><tr>
-				<td><div align="left" >- Knowledge Management, Fuzzy logics</div></td>
-				<td width="50px"></td></tr><tr>
-			 	<td><div align="left" >- Signal Control System &amp; Processing</div></td>
-				<tr></tr>
-			 </tr>
-
-			 <tr>
-			 <td bgcolor="#FFFFFF"><div align="left" >- Computer Architecture and Embedded Systems VLSI Algorithms Communication systems</div></td>
-			 <td width="50px"></td></tr><tr>
-			 <td><div align="left" >- Broadband access networks, Wireless &amp; ultra-wide band radio</div></td>
-			 <td width="50px"></td></tr><tr>
-			 <td><div align="left" >- Bluetooth technology, Wireless Ad Hoc and Sensor Networks, Wireless Mesh Networks</div></td>
-			 <tr></tr>
-			 </tr>
-
-
-			<tr>
-			<td bgcolor="#FFFFFF"><div align="left" >- Cryptography,Security and Privacy of Mobile &amp; Wireless Networks</div></td>
-			<td width="50px"></td></tr><tr>
-			<td><div align="left" >- Performance  Evaluations of Protocols and Security Application</div></td>
-	 		<td width="50px"></td></tr><tr>
-			<td><div align="left" >-Recent  Trends in Mobile and Wireless Applications</div></td>
-			 <tr></tr>
-			 </tr>
-
-		</table>
-
-		</p>
 
 				 <p style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">&nbsp;</p>
 
@@ -419,6 +255,7 @@
 
 		<li><div><img src="" align="left" style="margin:10px" /><a href="index.html"> Home</a></div></li>
 		<li><div><a href="Archives.html">Archives</a></div></li>
+		<li><div><a href="Topics.html">Topics</a></div></li>
 		<li><div><a href="CurrentIssues.html">Current Issue</a></div></li>
 		<li><div><a href="callforpaper.html">Call For Paper<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></a></div></li>
 		<li><div><a href="Publication-Fee.html">Publication Fee </a>
@@ -455,10 +292,10 @@
 		<div>
 		<ul class="sidemenumulti">
 		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.mathsjournal.org" target="blank"><font size="2"><strong>ISAR IJMCT </strong></font></a></div></li>
-		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>IJCSE </strong></font></a></div></li>
-                <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.internationaljournalisar.org/IJMCT/index.html" target="blank"><font size="2"><strong>IJMCT </strong></font></a></div></li>
-                <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.internationaljournalisar.org/IJPT/index.html" target="blank"><font size="2"><strong>IJPT</strong></font></a></div></li>
-                <li><div><a href="http://www.internationaljournalisar.org" target="blank"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
+		<li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijcsejournal.org" target="blank"><font size="2"><strong>ISAR IJCSE </strong></font></a></div></li>
+        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijretjournal.org" target="blank"><font size="2"><strong>ISAR IJRET </strong></font></a></div></li>
+        <li><div><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:07px"><a href="http://www.ijp2p.org" target="blank"><font size="2"><strong>ISAR IJPT</strong></font></a></div></li>
+        <li><div><a href="http://www.internationaljournalisar.org" target="blank"><font size="2" font color="blue"><strong>More Journals</strong></font></a></div></li>
 		</ul></div></div>
 
 <!--<div class="sidebarboxmulti" align="center">
@@ -469,8 +306,10 @@
 
 			<div class="sidebarboxmulti" align="center">
               <h2> Visiter Counter</h2>
-			   <center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1404326,"FFFFFF","000000","cccccc",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
-			   </center>
+			  <!-- BEGIN: Powered by Supercounters.com -->
+			  			<center><script type="text/javascript" src="http://widget.supercounters.com/flag.js"></script><script type="text/javascript">sc_flag(1421319,"FFFFFF","000000","0d0c0d",2,10,0,0)</script><br><noscript><a href="http://www.supercounters.com/">Flag Counter</a></noscript>
+			  			</center>
+			<!-- END: Powered by Supercounters.com -->
 
 			</div>
 
