Updated copyrights and paper format links

--- a/Peer-review.html
+++ b/Peer-review.html
@@ -313,8 +313,8 @@
               <h2><center>DOWNLOADS</center></h2>
 			  <div>
 			 <ul class="sidemenumulti">
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-CopyrightForm.docx"> Copyrights-From</a></div></li>
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-Paper Format.docx">Paper Template</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx"> Copyrights-From</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx">Paper Template</a></div></li>
 			</ul>
 			  </div>
 			</div>
