--- a/callforpaper.html
+++ b/callforpaper.html
@@ -341,7 +341,7 @@
 </td>
 <td style="width: 959.6pt; border-style: solid solid solid none; border-top-color: black; border-right-color: black; border-bottom-color: black; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 0in 5.4pt;" valign="top" width="213">
 
-<p><span style="font-family: cambria; font-size: 11pt;">&nbsp;<a href="http://www.mathsjournal.org/images/ISAR IJMCT-Paper Format.docx"><font color="#000080"><strong>Download</strong></a></font></span></p>
+<p><span style="font-family: cambria; font-size: 11pt;">&nbsp;<a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx"><font color="#000080"><strong>Download</strong></a></font></span></p>
 
 </td>
 <tr>
@@ -356,7 +356,7 @@
 </td>
 <td style="width: 959.6pt; border-style: solid solid solid none; border-top-color: black; border-right-color: black; border-bottom-color: black; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 0in 5.4pt;" valign="top" width="213">
 
-<p><span style="font-family: cambria; font-size: 11pt;">&nbsp;<a href="http://www.mathsjournal.org/images/ISAR IJMCT-CopyrightForm.docx"><font color="#000080"><strong>Download</strong></font></span></p>
+<p><span style="font-family: cambria; font-size: 11pt;">&nbsp;<a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx"><font color="#000080"><strong>Download</strong></font></span></p>
 
 </td>
 <tr>
@@ -455,8 +455,8 @@ were used latex then send it PDF format.</li><br>
               <h2><center>DOWNLOADS</center></h2>
 			  <div>
 			 <ul class="sidemenumulti">
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-CopyrightForm.docx"> Copyrights-From</a></div></li>
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-Paper Format.docx">Paper Template</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx"> Copyrights-From</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx">Paper Template</a></div></li>
 			</ul>
 			  </div>
 			</div>
