--- a/instructions.html
+++ b/instructions.html
@@ -240,7 +240,7 @@ Journal publishes peer-reviewed and fully refereed original research papers, cas
 Manuscripts are to be  submitted to Managing Editor at <strong> IJMCTchief@gmail.com </strong>. Please  submit the Manusrcipt as MS Word file along with the copy right form, in the  format given below:</p><br>
 
 
-<p><center><font size="3">Click here to download the <a href="http://www.mathsjournal.org/images/ISAR IJMCT-CopyrightForm.docx" target="_self"><strong>Copyrights form</strong></a>  and <a href="http://www.mathsjournal.org/images/ISAR IJMCT-Paper Format.docx" target="_self"><strong>Paper Template</a></strong><br></font></center><br></p>
+<p><center><font size="3">Click here to download the <a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx" target="_self"><strong>Copyrights form</strong></a>  and <a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx" target="_self"><strong>Paper Template</a></strong><br></font></center><br></p>
 
 
 <p align="justify" style="font-size:13px; font-family:'arial', Times, serif;color:#000000"><br />
@@ -308,8 +308,8 @@ Manuscripts are to be  submitted to Managing Editor at <strong> IJMCTchief@gmail
               <h2><center>DOWNLOADS</center></h2>
 			  <div>
 			 <ul class="sidemenumulti">
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-CopyrightForm.docx"> Copyrights-From</a></div></li>
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-Paper Format.docx">Paper Template</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx"> Copyrights-From</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx">Paper Template</a></div></li>
 			</ul>
 			  </div>
 			</div>
