--- a/ContactUs.html
+++ b/ContactUs.html
@@ -325,8 +325,8 @@ Chennai - 600099	</font><br><br>	</div>
               <h2><center>DOWNLOADS</center></h2>
 			  <div>
 			 <ul class="sidemenumulti">
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-CopyrightForm.docx"> Copyrights-From</a></div></li>
-						<li><div><a href="http://www.mathsjournal.org/images/ISAR IJMCT-Paper Format.docx">Paper Template</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx"> Copyrights-From</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx">Paper Template</a></div></li>
 			</ul>
 			  </div>
 			</div>
