--- a/Vol1IssueNo.1.html
+++ b/Vol1IssueNo.1.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 	 	  	<div id="logo">
-			<img src="http://www.mathsjournal.org/images/title1.jpg" alt="ISAR IJMCT" width="977" height="220" />
+			<img src="http://www.mathsjournal.org/images/title1.jpg" alt="IJMCT - ISAR Journals" width="977" height="220" />
 
 		</div>
 
@@ -117,7 +117,7 @@
 <a class="close-reveal-modal">&#215;</a></div>
 
 <div id="2" class="reveal-modal">
-<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="ISAR IJMCT" title="ISAR IJMCT citation" width="80"  height="10" >
+<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
 <strong></strong><p class="bord"><font size ="2"> Kirti Karande, Hardik Vaghela , <font color="red"><em><strong>"Microcontroller using Density Based Traffic Signal Systeming"</strong></em></font> Vol. 1 - Issue 1  ( 1 - 4 ) -  November– December 2015,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994 , www.mathsjournal.org</font></p>
 <a class="close-reveal-modal">&#215;</a></div></div></td>
 
@@ -141,7 +141,7 @@
 <a class="close-reveal-modal">&#215;</a></div>
 
 <div id="10" class="reveal-modal">
-<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="ISAR IJMCT" title="ISAR IJMCT citation" width="80"  height="10" >
+<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
 <strong></strong><p class="bord"><font size ="2"> Khushbu M. Lodha, Elkadiri Kamal Eddine , <font color="red"><em><strong>"Over speed indication and Automatic Accident Avoidance systems in a four wheeler"</strong></em></font> Vol. 2 - Issue 3  ( 5 - 8 ) - November– December 2015 ,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994 , www.mathsjournal.org</font></p>
 <a class="close-reveal-modal">&#215;</a></div></div></td>
 
@@ -166,7 +166,7 @@
 <a class="close-reveal-modal">&#215;</a></div>
 
 <div id="6" class="reveal-modal">
-<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="ISAR IJMCT" title="ISAR IJMCT citation" width="80"  height="10" >
+<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
 <strong></strong><p class="bord"><font size ="2"> Simranjit Kaur, Kiran Jyoti , <font color="red"><em><strong>" Earth Process AutomationSpace Techniques "</strong></em></font> Vol. 2 - Issue 3  ( 19-26 ) - November– December 2015,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994 , www.mathsjournal.org</font></p>
 <a class="close-reveal-modal">&#215;</a></div></div></td>
 
@@ -191,7 +191,7 @@
 <a class="close-reveal-modal">&#215;</a></div>
 
 <div id="10" class="reveal-modal">
-<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="ISAR IJMCT" title="ISAR IJMCT citation" width="80"  height="10" >
+<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
 <strong></strong><p class="bord"><font size ="2"> Gurdas , Karan , <font color="red"><em><strong>"Bomb Detection Robotics using Embedded Controller "</strong></em></font> Vol. 2 - Issue 3  ( 12-15 ) - November– December  2015,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994 , www.mathsjournal.org</font></p>
 <a class="close-reveal-modal">&#215;</a></div></div></td>
 
@@ -216,7 +216,7 @@
 <a class="close-reveal-modal">&#215;</a></div>
 
 <div id="10" class="reveal-modal">
-<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="ISAR IJMCT" title="ISAR IJMCT citation" width="80"  height="10" >
+<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
 <strong></strong><p class="bord"><font size ="2"> Utpal , Nihal , <font color="red"><em><strong>" Hybrid Design Electro thermal Polymeric Micro gripper with Integrated Force Sensor "</strong></em></font> Vol. 1 - Issue 1  ( 16 - 19 ) - November– December  2015,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994 , www.mathsjournal.org</font></p>
 <a class="close-reveal-modal">&#215;</a></div></div></td>
 
@@ -239,21 +239,21 @@
 								<ul class="sidemenumulti">
 
 	<li><div><img src="" align="left" style="margin:10px" /><a href="index.html"> Home</a></div></li>
-	<li><div><a href="Archives.html">Archives</a></div></li>
-	<li><div><a href="Topics.html">Topics</a></div></li>
-	<li><div><a href="CurrentIssues.html">Current Issue</a></div></li>
+	<li><div><a href="Archives.html"alt="IJMCT - ISAR Journals">Archives</a></div></li>
+	<li><div><a href="Topics.html" alt="IJMCT - ISAR Journals">Topics</a></div></li>
+	<li><div><a href="CurrentIssues.html" alt="IJMCT - ISAR Journals">Current Issue</a></div></li>
 	<li><div><a href="callforpaper.html">Call For Paper<img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></a></div></li>
-	<li><div><a href="Publication-Fee.html">Publication Fee </a>
-	<li><div><a href="aimscope.html">Aim and Scope</a></div></li>
-	<li><div><a href="publish_paper.html">Submission</a></div></li>
+	<li><div><a href="Publication-Fee.html" alt="IJMCT - ISAR Journals">Publication Fee </a>
+	<li><div><a href="aimscope.html" alt="IJMCT - ISAR Journals">Aim and Scope</a></div></li>
+	<li><div><a href="publish_paper.html" alt="IJMCT - ISAR Journals">Submission</a></div></li>
 	<li><div><a href="instructions.html">Author Instructions </a></div></li>
-	<li><div><a href="indexing.html">Indexing</a></div></li>
-	<li><div><a href="Peer-review.html">Peer Review</a></div></li>
-	<li><div><a href="Board-Member.html">Board Member</a></div></li>
-	<li><div><a href="copyright-infringement.html">Copyright-Infringement</a></div></li>
-	<li><div><a href="Joinus.html">Join us as Reviewer</a></div>
-	<li><div><a href="faq.html">FAQ</a></div></li>
-	<li><div><a href="ContactUs.html">Contact us</a></div></li>
+	<li><div><a href="indexing.html" alt="IJMCT - ISAR Journals">Indexing</a></div></li>
+	<li><div><a href="Peer-review.html" alt="IJMCT - ISAR Journals">Peer Review</a></div></li>
+	<li><div><a href="Board-Member.html" alt="IJMCT - ISAR Journals">Board Member</a></div></li>
+	<li><div><a href="copyright-infringement.html" alt="IJMCT - ISAR Journals">Copyright-Infringement</a></div></li>
+	<li><div><a href="Joinus.html" alt="IJMCT - ISAR Journals">Join us as Reviewer</a></div>
+	<li><div><a href="faq.html" alt="IJMCT - ISAR Journals">FAQ</a></div></li>
+	<li><div><a href="ContactUs.html" alt="IJMCT - ISAR Journals">Contact us</a></div></li>
 			  </ul></ul>
 	  </div>
 
@@ -261,8 +261,8 @@
               <h2>DOWNLOADS</h2>
 			  <div>
 			 <ul class="sidemenumulti">
-						<li><div><a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx"> Copyrights-From</a></div></li>
-						<li><div><a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx">Paper Template</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTCopyrightForm.docx" alt="IJMCT - ISAR Journals"> Copyrights-From</a></div></li>
+						<li><div><a href="http://www.mathsjournal.org/images/IJMCTPaperFormat.docx" alt="IJMCT - ISAR Journals">Paper Template</a></div></li>
 			</ul>
 			  </div>
 			</div>
@@ -321,7 +321,7 @@
 		    <div>
 		      <div id="div">
 		        <div>
-		          <div align="center"><br><font size="1" color="brown">Copyright &copy;2016 <a href="http://www.mathsjournal.org" target="blank"><font size="1" color="black"> ISAR IJMCT - ISAR - International Journal of Mathematics and Computing Techniques</font></a>Published By <a href="http://www.internationaljournalisar.org" target="blank"><font size="1" color="black" target="blank">ISAR International Scientific And Research Group</font></a>, All rights reserved </font><br/><br />
+		          <div align="center"><br><font size="1" color="brown">Copyright &copy;2016 <a href="http://www.mathsjournal.org" target="blank" alt="IJMCT- ISAR Journals"><font size="1" color="black"> ISAR IJMCT - ISAR - International Journal of Mathematics and Computing Techniques</font></a>Published By <a href="http://www.internationaljournalisar.org" target="blank" alt="ISAR Journals"><font size="1" color="black" target="blank">ISAR International Scientific And Research Group</font></a>, All rights reserved </font><br/><br />
 		           </div>
 		        </div>
 	          </div>
